--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="drop-zone">
                 <div>
-                    <ul id="sortable">
+                    <ul id="sortable" class="ui-sortable ui-dropable">
 
                     </ul>
                 </div>
